[package]
name = "neptis-fs"
version = "0.1.0"
edition = "2024"

[dependencies]
easy_fuser = { version = "0.4.0", features = ["serial"] }
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "*"
chrono = { version = "*", features = ["serde"] }
base64 = "*"
log = { version = "0.4"}
env_logger = { version = "0.11"}